# aethers

./: Cargo.toml  Dockerfile.android  Dockerfile.build  README.md  build.rs  justfile  rust-toolchain.toml  uniffi.toml
src/: aethers.udl  lib.rs
src/abi/: aminox_bridge.abi  erc20.abi  erc721.abi
tests/: test_generated_bindings.rs  test_generated_bindings_kt.rs
tests/bindings/: test_aethers.kts  test_aethers.swift  test_sprites.swift
