[package]
name = "aethers"
authors = ["denistsai@aetheras.io"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/dt665m/aethers"

[lib]
name = "aethers"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "bin/uniffi-bindgen.rs"

[dependencies]
log = "0.4"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
futures = "0.3"
once_cell = "1.18.0"

ethers-core = "2.0.3"
ethers-contract = "2.0.3"
ethers-providers = { version = "2.0.3", default-features = false, features = [
    "ws",
    "rustls",
] }
coins-bip32 = "0.8.3"
coins-bip39 = "0.8.6"

#Keystore
aes = "0.8.0"
ctr = "0.9.0"
digest = "0.10.0"
hex = "0.4.2"
hmac = "0.12.0"
pbkdf2 = { version = "0.11", default-features = false }
rand = "0.8.4"
scrypt = { version = "0.10.0", default-features = false }
sha2 = "0.10.1"
sha3 = "0.10.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
ethereum-types = { version = "0.14.1" }
k256 = { version = "0.13.1" }

# This is refactored to a "bindgen" feature in later versions
uniffi = { version = "0.23.0", features = ["cli"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"

[target.'cfg(not(target_os="android"))'.dependencies]
env_logger = "0.9.0"

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }
atb-build = { git = "https://github.com/aetheras-io/atb-rs", tag = "v0.14.5" }

[dev-dependencies]
uniffi = { version = "0.23.0", features = ["bindgen-tests"] }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
